methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:2: error: not found: value faireMotif
  faireMotif()
  ^PatternPicture:3: error: not found: value change
  change()
  ^PatternPicture:4: error: not found: value faireMotif
  faireMotif()
  ^PatternPicture:8: error: not found: value faireMotif
faireMotif(){
^PatternPicture:10: error: not found: value Ligne
    Ligne(Color.red, Color.blue)
    ^PatternPicture:11: error: not found: value Ligne
    Ligne(Color.blue, Color.green)
    ^PatternPicture:12: error: not found: value Ligne
    Ligne(Color.green, Color.yellow)
    ^PatternPicture:13: error: not found: value Ligne
    Ligne(Color.yellow, Color.red)
    ^PatternPicture:26: error: not found: value Ligne
Ligne(a:Color, b:Color){
^PatternPicture:26: error: not found: value a
Ligne(a:Color, b:Color){
      ^PatternPicture:26: error: not found: value b
Ligne(a:Color, b:Color){
               ^PatternPicture:27: error: not found: value marque
  marque(a)
  ^PatternPicture:27: error: not found: value a
  marque(a)
         ^PatternPicture:28: error: not found: value marque
  marque(b)
  ^PatternPicture:28: error: not found: value b
  marque(b)
         ^PatternPicture:33: error: not found: value marque
marque(c:Color){
^PatternPicture:33: error: not found: value c
marque(c:Color){
       ^PatternPicture:34: error: not found: value c
  setCouleurBrosse(c)
                   ^PatternPicture:40: error: not found: value change
change(){
^